<resources>
    <string name="app_name">android学习之路</string>
    <string name="hello_world">Hello world!</string>

    <string name="id">用户id</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="number">手机号</string>

    <string name="login">登陆</string>
    <string name="reset">重置</string>
    <string name="rememberPassword">记住密码</string>
    <string name="register">注册</string>
    <string name="myself">查看个人信息</string>

    <string name="sd_total_size">sd总内存</string>
    <string name="sd_available_size">sd可用内存</string>
    <string name="in_total_size">内部存储总内存</string>
    <string name="in_available_size">内部存储可用内存</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_student_info">StudentInfoActivity</string>
</resources>
